# LivSynth

./: .cproject  .gitignore  .mxproject  .project  CHANGELOG.md  CMakeLists.txt  LICENSE  LivSynth Debug.launch  LivSynth.ioc  LivSynth_Firmware.ioc  Makefile  README.md  swvtrace.sh
.github/workflows/: release.yml
App/: Config.h  LivSynthMain.cpp  LivSynthMain.h
App/Engine/: Engine.cpp  Engine.h  MidiMessage.cpp  MidiMessage.h  MidiUSBMessage.cpp  MidiUSBMessage.h  NoteTrackEngine.cpp  NoteTrackEngine.h  SequenceState.cpp  SequenceState.h  SortedQueue.h  TrackEngine.h
App/Middleware/: AdcInternal.cpp  AdcInternal.h  ButtonMatrix.cpp  ButtonMatrix.h  ClockTimer.cpp  ClockTimer.h  DacInternal.cpp  DacInternal.h  Dio.cpp  Dio.h  Flash.h  LEDDriver.cpp  LEDDriver.h  ShiftRegister.cpp  ShiftRegister.h  System.cpp  System.h
App/Model/: Bitfield.h  ClockSetup.cpp  ClockSetup.h  KnownDivisor.h  Model.cpp  Model.h  ModelUtils.cpp  ModelUtils.h  NoteSequence.cpp  NoteSequence.h  NoteTrack.cpp  NoteTrack.h  Project.cpp  Project.h  TimeSignature.cpp  TimeSignature.h  Types.h
App/System/: Clock.cpp  Clock.h  MidiHandler.h  swvPrint.cpp  swvPrint.h
App/UI/: CVReader.cpp  CVReader.h  Event.h  Key.h  KeyPressEventTracker.h  RGBLed.h  UiController.cpp  UiController.h
App/Utils/: FlashStorage.h  Groove.h  Math.h  MovingAverage.h  Random.h  RingBuffer.h  Utils.h
Core/Inc/: adc.h  dac.h  i2c.h  main.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Core/Src/: adc.c  dac.c  dma.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c
Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
Middlewares/ST/STM32_USB_Device_Library/Class/CompositeBuilder/Inc/: usbd_composite_builder.h
Middlewares/ST/STM32_USB_Device_Library/Class/CompositeBuilder/Src/: usbd_composite_builder.c
Middlewares/ST/STM32_USB_Device_Library/Class/MIDI/Inc/: usbd_midi.h
Middlewares/ST/STM32_USB_Device_Library/Class/MIDI/Src/: usbd_midi.c
Middlewares/ST/STM32_USB_Device_Library/Core/Inc/: usbd_def.h
Middlewares/ST/STM32_USB_Device_Library/Core/Src/: usbd_core.c
USB_DEVICE/App/: usb_device.c  usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c  usbd_desc.h  usbd_dfu_if.c  usbd_midi_if.c  usbd_midi_if.h
cmake/: gcc-arm-none-eabi.cmake
hardware/: SpecialItems.md
hardware/Faceplate/: LivSynth_Faceplate.kicad_pro  Pad_PostModifications.py  RenderSpeakerGrill.py  fp-lib-table
hardware/Faceplate/production/: bom.csv  designators.csv  positions.csv
hardware/KiCad/LivSynth_0v1/: EG.kicad_sch  IO.kicad_sch  LFO.kicad_sch  LivSynth_Hardware.csv  LivSynth_Hardware.dsn  LivSynth_Hardware.kicad_prl  LivSynth_Hardware.kicad_pro  LivSynth_Hardware.kicad_sch  MCU.kicad_sch  ModMatrix.kicad_sch  Power.kicad_sch  Slew.kicad_sch  VCA.kicad_sch  VCF.kicad_sch  VCO.kicad_sch  fp-info-cache  ibom.html
hardware/KiCad/LivSynth_0v1/Gerbers/: LivSynth_Hardware-B_Cu.gbr  LivSynth_Hardware-B_Mask.gbr  LivSynth_Hardware-B_Paste.gbr  LivSynth_Hardware-B_Silkscreen.gbr  LivSynth_Hardware-Edge_Cuts.gbr  LivSynth_Hardware-F_Cu.gbr  LivSynth_Hardware-F_Mask.gbr  LivSynth_Hardware-F_Paste.gbr  LivSynth_Hardware-F_Silkscreen.gbr  LivSynth_Hardware-NPTH-drl_map.gbr  LivSynth_Hardware-NPTH.drl  LivSynth_Hardware-PTH-drl_map.gbr  LivSynth_Hardware-PTH.drl  LivSynth_Hardware-drl.rpt  LivSynth_Hardware-job.gbrjob
hardware/KiCad/LivSynth_0v2/: EG.kicad_sch  IO.kicad_sch  LFO.kicad_sch  LivSynth_Faceplate.kicad_pcb  LivSynth_Faceplate.kicad_prl  LivSynth_Faceplate.kicad_pro  LivSynth_Hardware.kicad_prl  LivSynth_Hardware.kicad_pro  LivSynth_Hardware.kicad_sch  MCU.kicad_sch  ModMatrix.kicad_sch  Power.kicad_sch  Slew.kicad_sch  VCA.kicad_sch  VCF.kicad_sch  VCO.kicad_sch  fp-info-cache  ibom.config.ini  ibom.html
hardware/KiCad/LivSynth_0v2/Faceplate/: LivSynth_Faceplate.kicad_pcb  LivSynth_Faceplate.kicad_prl  LivSynth_Faceplate_front.kicad_mod
hardware/KiCad/LivSynth_0v2/Faceplate/.svg2shenzhen-cache/: export_options.pickle  g27-F.Cu-export-true.hash  g29-F.Mask-export-true.hash  g31-F.SilkS-export-true.hash  g37524-F.Mask-export-true.hash
hardware/KiCad/LivSynth_0v2/Faceplate/.svg2shenzhen-cache/LivSynth_Faceplate_front.pretty/: F.Cu_g27.kicad_mod  F.Mask_g29.kicad_mod  F.Mask_g37524.kicad_mod  F.SilkS_g31.kicad_mod
hardware/KiCad/LivSynth_0v2/Faceplate/production/: netlist.ipc
hardware/KiCad/LivSynth_0v2/Gerbers/: LivSynth_Hardware-B_Cu.gbr  LivSynth_Hardware-B_Mask.gbr  LivSynth_Hardware-B_Paste.gbr  LivSynth_Hardware-B_Silkscreen.gbr  LivSynth_Hardware-Edge_Cuts.gbr  LivSynth_Hardware-F_Cu.gbr  LivSynth_Hardware-F_Mask.gbr  LivSynth_Hardware-F_Paste.gbr  LivSynth_Hardware-F_Silkscreen.gbr  LivSynth_Hardware-NPTH-drl_map.gbr  LivSynth_Hardware-NPTH.drl  LivSynth_Hardware-PTH-drl_map.gbr  LivSynth_Hardware-PTH.drl  LivSynth_Hardware-drl.rpt  LivSynth_Hardware-job.gbrjob
hardware/KiCad/LivSynth_0v2/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
hardware/KiCad/LivSynth_0v3/: EG.kicad_sch  IO.kicad_sch  LFO.kicad_sch  LivSynth_Hardware.csv  LivSynth_Hardware.kicad_sch  MCU.kicad_sch  Slew.kicad_sch  VCA.kicad_sch  VCF.kicad_sch  VCO.kicad_sch  ibom.html
hardware/KiCad/LivSynth_0v3/Faceplate/: LivSynth_Faceplate.kicad_pro  RenderSpeakerGrill.py  fp-lib-table
hardware/KiCad/LivSynth_0v3/Faceplate/.svg2shenzhen-cache/: g31-F.SilkS-export-true.hash
hardware/KiCad/LivSynth_0v3/Faceplate/.svg2shenzhen-cache/LivSynth_Faceplate_front.pretty/: F.SilkS_g31.kicad_mod
hardware/Mainboard/: EG.kicad_sch  IO.kicad_sch  LFO.kicad_sch  LivSynth_Hardware.csv  LivSynth_Hardware.kicad_prl  LivSynth_Hardware.kicad_pro  LivSynth_Hardware.kicad_sch  MCU.kicad_sch  OpampLayout.txt  Power.kicad_sch  VCO.kicad_sch  ibom.config.ini  ibom.html
hardware/Mainboard/production/: netlist.ipc  positions.csv
